# vkml-compiler

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  input_tosa.mlir  main.cpp  mliropt_stdout.txt  passes.txt  run_pipeline.bat  step1.mlir  step2.mlir  step3.mlir  step3_parallel.mlir  step4.mlir
inc/: CMakeLists.txt  Tensor.h  backend.h  backend_passes.h  comp.h  compiler.h  frontend.h  frontend_passes.h  runtime.h  vkml.h  vkmlDialect.h  vkmlType.h  vkml_compiler.h  vkrtDialect.h
inc/Dialect/comp/IR/: CMakeLists.txt  comp.h  comp.td
inc/Dialect/vkml/IR/: vkml.h  vkml.td
inc/Dialect/vkrt/IR/: vkrt.h
lib/: CMakeLists.txt  compiler.cpp  vkml_compiler.cpp
lib/Conversion/: CMakeLists.txt  lowerFrontendToBackend.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/backend/: CMakeLists.txt
lib/Dialect/comp/IR/: CMakeLists.txt
lib/Dialect/frontend/: CMakeLists.txt  LowerFrontendToBackendPass.cpp  LowerFrontendToMLIRPass.cpp  Passes.cpp  frontend.cpp
lib/Dialect/vkml/: CMakeLists.txt  vkml.cpp
lib/Dialect/vkml/IR/: CMakeLists.txt  vkml.cpp
lib/Dialect/vkrt/: vkrt.cpp
lib/Dialect/vkrt/IR/: CMakeLists.txt  vkrt.cpp
lib/Transforms/: CMakeLists.txt
lib/frontend/: CMakeLists.txt  LowerFrontendToBackendPass.cpp  LowerFrontendToMLIRPass.cpp  LowerFrontendToMathPass.cpp  LowerFrontendToTosaPass.cpp
specs/001-mlir-compiler-interface/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mlir-compiler-interface/contracts/: compiler-api.md  tensor-api.md
src/models/: CompilationConfiguration.cpp  CompilationConfiguration.h  DiagnosticReport.cpp  DiagnosticReport.h  OperationFunction.cpp  OperationFunction.h  ProgramSegment.cpp  ProgramSegment.h  Tensor.cpp  TensorExpression.cpp  TensorExpression.h
tablegen/Conversion/: CMakeLists.txt  pass.td
tablegen/Dialect/: CMakeLists.txt
tablegen/Dialect/backend/: CMakeLists.txt  backend.td
tablegen/Dialect/comp/: CMakeLists.txt  comp.td
tablegen/Dialect/frontend/: CMakeLists.txt  frontend.td  frontend_pass.td  pass.td
tablegen/Dialect/runtime/: CMakeLists.txt  runtime.td
tablegen/Dialect/vkml/: CMakeLists.txt  vkml.td
tablegen/Dialect/vkml/IR/: vkml.td
tablegen/Dialect/vkrt/: vkrt.td
tablegen/Dialect/vkrt/IR/: CMakeLists.txt  vkrt.td
tests/: contract_compiler_api_test.cpp  contract_tensor_api_test.cpp  integration_quickstart_test.cpp
tools/: CMakeLists.txt  gen_onnx_ops.py
tools/driver/: Driver.cpp
tools/opt/: vkml-opt.cpp
